[gd_scene load_steps=9 format=3 uid="uid://b6hjopgubjos1"]

[ext_resource type="Script" path="res://Assets/Scripts/Drink Station/drink.gd" id="1_rek8h"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/visualComponent.gd" id="2_wxmox"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/recipeCheckerComponent.gd" id="3_uf7xl"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/pickupComponent.gd" id="4_knc75"]
[ext_resource type="Script" path="res://Assets/Scripts/Components/ingredientContainerComponent2.gd" id="5_vl7q5"]
[ext_resource type="Texture2D" uid="uid://dmgu26qdbohij" path="res://Assets/Sprites/cup_temp.png" id="6_gb0tf"]
[ext_resource type="Texture2D" uid="uid://dpewleyar1q15" path="res://Assets/Sprites/temp_glow.png" id="6_xbt0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56mvm"]
size = Vector2(95, 120)

[node name="drink" type="Node2D" node_paths=PackedStringArray("ingredientContainer", "visualComponent", "pickupComponent")]
script = ExtResource("1_rek8h")
ingredientContainer = NodePath("ingredientContainerComponent2")
visualComponent = NodePath("visualComponent")
pickupComponent = NodePath("pickupComponent")

[node name="pickupComponent" type="Node2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("4_knc75")
parent = NodePath("..")

[node name="recipeCheckerComponent" type="Node2D" parent="."]
script = ExtResource("3_uf7xl")

[node name="visualComponent" type="Node2D" parent="." node_paths=PackedStringArray("glowSprite")]
script = ExtResource("2_wxmox")
glowSprite = NodePath("../glowSprite")

[node name="ingredientContainerComponent2" type="Node2D" parent="." node_paths=PackedStringArray("pickupComponent", "heldIngredientsPreview", "dispenserPosition")]
script = ExtResource("5_vl7q5")
allowDuplicates = false
pickupComponent = NodePath("../pickupComponent")
heldIngredientsPreview = NodePath("label")
dispenserPosition = NodePath("../corner")

[node name="label" type="Label" parent="ingredientContainerComponent2"]
offset_left = -39.0
offset_top = -51.0
offset_right = 1.0
offset_bottom = -28.0

[node name="area2d" type="Area2D" parent="."]

[node name="collisionShape2d" type="CollisionShape2D" parent="area2d"]
shape = SubResource("RectangleShape2D_56mvm")

[node name="glowSprite" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 0, 0.458824, 1)
texture = ExtResource("6_xbt0m")

[node name="cupSprite" type="Sprite2D" parent="."]
texture = ExtResource("6_gb0tf")

[node name="corner" type="Marker2D" parent="."]
position = Vector2(47, -60)

[connection signal="mouse_entered" from="area2d" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="area2d" to="." method="_on_area_2d_mouse_exited"]
